# learn-rust-with-web-application

./: README.md
todo-api/: .env  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
todo-api/migrations/: 20220810024613_init.sql  20220810072026_label.sql
todo-api/src/: handlers.rs  main.rs  repositories.rs
todo-api/src/handlers/: label.rs  todo.rs
todo-api/src/repositories/: label.rs  todo.rs
todo-front/: package-lock.json  package.json
todo-front/src/: App.tsx  main.tsx
todo-front/src/components/: SideNav.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
todo-front/src/lib/: toggleLabels.ts
todo-front/src/lib/api/: label.ts  todo.ts
todo-front/src/styles/: modal.ts
todo-front/src/types/: todo.d.ts
