[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4.8"
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1.16.1", features = ["full"] }
tower = "0.4.11"
mime = "0.3.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tracing = "0.1.30"
tracing-subscriber = { version="0.3.8", features = ["env-filter"] }
anyhow = "1.0.56"
thiserror = "1.0.30"